flux/dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: app-msc-dipterv-dev
spec:
  ingressClassName: traefik
  rules:
    - host: dev.dipterv.msc.nemes.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 80
